// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Generator Base writeFilesToDisk when called with default angular client options should produce correct files 1`] = `
Array [
  ".browserslistrc",
  ".eslintrc.json",
  ".npmrc",
  "README.md.jhi.client.angular",
  "angular.json",
  "jest.conf.js",
  "ngsw-config.json",
  "package.json",
  "src/main/webapp/app/account/account.module.ts",
  "src/main/webapp/app/account/account.route.ts",
  "src/main/webapp/app/account/activate/activate.component.html",
  "src/main/webapp/app/account/activate/activate.component.spec.ts",
  "src/main/webapp/app/account/activate/activate.component.ts",
  "src/main/webapp/app/account/activate/activate.route.ts",
  "src/main/webapp/app/account/activate/activate.service.ts",
  "src/main/webapp/app/account/password-reset/finish/password-reset-finish.component.html",
  "src/main/webapp/app/account/password-reset/finish/password-reset-finish.component.spec.ts",
  "src/main/webapp/app/account/password-reset/finish/password-reset-finish.component.ts",
  "src/main/webapp/app/account/password-reset/finish/password-reset-finish.route.ts",
  "src/main/webapp/app/account/password-reset/finish/password-reset-finish.service.ts",
  "src/main/webapp/app/account/password-reset/init/password-reset-init.component.html",
  "src/main/webapp/app/account/password-reset/init/password-reset-init.component.spec.ts",
  "src/main/webapp/app/account/password-reset/init/password-reset-init.component.ts",
  "src/main/webapp/app/account/password-reset/init/password-reset-init.route.ts",
  "src/main/webapp/app/account/password-reset/init/password-reset-init.service.ts",
  "src/main/webapp/app/account/password/password-strength-bar/password-strength-bar.component.html",
  "src/main/webapp/app/account/password/password-strength-bar/password-strength-bar.component.scss",
  "src/main/webapp/app/account/password/password-strength-bar/password-strength-bar.component.spec.ts",
  "src/main/webapp/app/account/password/password-strength-bar/password-strength-bar.component.ts",
  "src/main/webapp/app/account/password/password.component.html",
  "src/main/webapp/app/account/password/password.component.spec.ts",
  "src/main/webapp/app/account/password/password.component.ts",
  "src/main/webapp/app/account/password/password.route.ts",
  "src/main/webapp/app/account/password/password.service.ts",
  "src/main/webapp/app/account/register/register.component.html",
  "src/main/webapp/app/account/register/register.component.spec.ts",
  "src/main/webapp/app/account/register/register.component.ts",
  "src/main/webapp/app/account/register/register.model.ts",
  "src/main/webapp/app/account/register/register.route.ts",
  "src/main/webapp/app/account/register/register.service.ts",
  "src/main/webapp/app/account/settings/settings.component.html",
  "src/main/webapp/app/account/settings/settings.component.spec.ts",
  "src/main/webapp/app/account/settings/settings.component.ts",
  "src/main/webapp/app/account/settings/settings.route.ts",
  "src/main/webapp/app/admin/admin-routing.module.ts",
  "src/main/webapp/app/admin/docs/docs.component.html",
  "src/main/webapp/app/admin/docs/docs.component.scss",
  "src/main/webapp/app/admin/docs/docs.component.ts",
  "src/main/webapp/app/admin/docs/docs.module.ts",
  "src/main/webapp/app/admin/docs/docs.route.ts",
  "src/main/webapp/app/admin/user-management/delete/user-management-delete-dialog.component.html",
  "src/main/webapp/app/admin/user-management/delete/user-management-delete-dialog.component.spec.ts",
  "src/main/webapp/app/admin/user-management/delete/user-management-delete-dialog.component.ts",
  "src/main/webapp/app/admin/user-management/detail/user-management-detail.component.html",
  "src/main/webapp/app/admin/user-management/detail/user-management-detail.component.spec.ts",
  "src/main/webapp/app/admin/user-management/detail/user-management-detail.component.ts",
  "src/main/webapp/app/admin/user-management/list/user-management.component.html",
  "src/main/webapp/app/admin/user-management/list/user-management.component.spec.ts",
  "src/main/webapp/app/admin/user-management/list/user-management.component.ts",
  "src/main/webapp/app/admin/user-management/service/user-management.service.spec.ts",
  "src/main/webapp/app/admin/user-management/service/user-management.service.ts",
  "src/main/webapp/app/admin/user-management/update/user-management-update.component.html",
  "src/main/webapp/app/admin/user-management/update/user-management-update.component.spec.ts",
  "src/main/webapp/app/admin/user-management/update/user-management-update.component.ts",
  "src/main/webapp/app/admin/user-management/user-management.model.ts",
  "src/main/webapp/app/admin/user-management/user-management.module.ts",
  "src/main/webapp/app/admin/user-management/user-management.route.ts",
  "src/main/webapp/app/app-routing.module.ts",
  "src/main/webapp/app/app.constants.ts",
  "src/main/webapp/app/app.module.ts",
  "src/main/webapp/app/config/authority.constants.ts",
  "src/main/webapp/app/config/datepicker-adapter.ts",
  "src/main/webapp/app/config/dayjs.ts",
  "src/main/webapp/app/config/error.constants.ts",
  "src/main/webapp/app/config/font-awesome-icons.ts",
  "src/main/webapp/app/config/input.constants.ts",
  "src/main/webapp/app/config/language.constants.ts",
  "src/main/webapp/app/config/pagination.constants.ts",
  "src/main/webapp/app/config/translation.config.ts",
  "src/main/webapp/app/config/uib-pagination.config.ts",
  "src/main/webapp/app/core/auth/account.model.ts",
  "src/main/webapp/app/core/auth/account.service.spec.ts",
  "src/main/webapp/app/core/auth/account.service.ts",
  "src/main/webapp/app/core/auth/auth-jwt.service.spec.ts",
  "src/main/webapp/app/core/auth/auth-jwt.service.ts",
  "src/main/webapp/app/core/auth/state-storage.service.ts",
  "src/main/webapp/app/core/auth/user-route-access.service.ts",
  "src/main/webapp/app/core/config/application-config.service.spec.ts",
  "src/main/webapp/app/core/config/application-config.service.ts",
  "src/main/webapp/app/core/interceptor/auth-expired.interceptor.ts",
  "src/main/webapp/app/core/interceptor/auth.interceptor.ts",
  "src/main/webapp/app/core/interceptor/error-handler.interceptor.ts",
  "src/main/webapp/app/core/interceptor/index.ts",
  "src/main/webapp/app/core/interceptor/notification.interceptor.ts",
  "src/main/webapp/app/core/request/request-util.ts",
  "src/main/webapp/app/core/request/request.model.ts",
  "src/main/webapp/app/core/util/alert.service.spec.ts",
  "src/main/webapp/app/core/util/alert.service.ts",
  "src/main/webapp/app/core/util/data-util.service.spec.ts",
  "src/main/webapp/app/core/util/data-util.service.ts",
  "src/main/webapp/app/core/util/event-manager.service.spec.ts",
  "src/main/webapp/app/core/util/event-manager.service.ts",
  "src/main/webapp/app/core/util/operators.spec.ts",
  "src/main/webapp/app/core/util/operators.ts",
  "src/main/webapp/app/core/util/parse-links.service.spec.ts",
  "src/main/webapp/app/core/util/parse-links.service.ts",
  "src/main/webapp/app/entities/entity-routing.module.ts",
  "src/main/webapp/app/entities/user/user.model.ts",
  "src/main/webapp/app/entities/user/user.service.spec.ts",
  "src/main/webapp/app/entities/user/user.service.ts",
  "src/main/webapp/app/home/home.component.html",
  "src/main/webapp/app/home/home.component.scss",
  "src/main/webapp/app/home/home.component.spec.ts",
  "src/main/webapp/app/home/home.component.ts",
  "src/main/webapp/app/home/home.module.ts",
  "src/main/webapp/app/home/home.route.ts",
  "src/main/webapp/app/layouts/error/error.component.html",
  "src/main/webapp/app/layouts/error/error.component.ts",
  "src/main/webapp/app/layouts/error/error.route.ts",
  "src/main/webapp/app/layouts/footer/footer.component.html",
  "src/main/webapp/app/layouts/footer/footer.component.ts",
  "src/main/webapp/app/layouts/main/main.component.html",
  "src/main/webapp/app/layouts/main/main.component.spec.ts",
  "src/main/webapp/app/layouts/main/main.component.ts",
  "src/main/webapp/app/layouts/navbar/active-menu.directive.ts",
  "src/main/webapp/app/layouts/navbar/navbar.component.html",
  "src/main/webapp/app/layouts/navbar/navbar.component.scss",
  "src/main/webapp/app/layouts/navbar/navbar.component.spec.ts",
  "src/main/webapp/app/layouts/navbar/navbar.component.ts",
  "src/main/webapp/app/layouts/navbar/navbar.route.ts",
  "src/main/webapp/app/layouts/profiles/page-ribbon.component.scss",
  "src/main/webapp/app/layouts/profiles/page-ribbon.component.spec.ts",
  "src/main/webapp/app/layouts/profiles/page-ribbon.component.ts",
  "src/main/webapp/app/layouts/profiles/profile-info.model.ts",
  "src/main/webapp/app/layouts/profiles/profile.service.ts",
  "src/main/webapp/app/login/login.component.html",
  "src/main/webapp/app/login/login.component.spec.ts",
  "src/main/webapp/app/login/login.component.ts",
  "src/main/webapp/app/login/login.model.ts",
  "src/main/webapp/app/login/login.module.ts",
  "src/main/webapp/app/login/login.route.ts",
  "src/main/webapp/app/login/login.service.ts",
  "src/main/webapp/app/shared/alert/alert-error.component.html",
  "src/main/webapp/app/shared/alert/alert-error.component.spec.ts",
  "src/main/webapp/app/shared/alert/alert-error.component.ts",
  "src/main/webapp/app/shared/alert/alert-error.model.ts",
  "src/main/webapp/app/shared/alert/alert.component.html",
  "src/main/webapp/app/shared/alert/alert.component.spec.ts",
  "src/main/webapp/app/shared/alert/alert.component.ts",
  "src/main/webapp/app/shared/auth/has-any-authority.directive.spec.ts",
  "src/main/webapp/app/shared/auth/has-any-authority.directive.ts",
  "src/main/webapp/app/shared/date/duration.pipe.ts",
  "src/main/webapp/app/shared/date/format-medium-date.pipe.spec.ts",
  "src/main/webapp/app/shared/date/format-medium-date.pipe.ts",
  "src/main/webapp/app/shared/date/format-medium-datetime.pipe.spec.ts",
  "src/main/webapp/app/shared/date/format-medium-datetime.pipe.ts",
  "src/main/webapp/app/shared/language/find-language-from-key.pipe.ts",
  "src/main/webapp/app/shared/language/translate.directive.spec.ts",
  "src/main/webapp/app/shared/language/translate.directive.ts",
  "src/main/webapp/app/shared/pagination/item-count.component.spec.ts",
  "src/main/webapp/app/shared/pagination/item-count.component.ts",
  "src/main/webapp/app/shared/shared-libs.module.ts",
  "src/main/webapp/app/shared/shared.module.ts",
  "src/main/webapp/app/shared/sort/sort-by.directive.spec.ts",
  "src/main/webapp/app/shared/sort/sort-by.directive.ts",
  "src/main/webapp/app/shared/sort/sort.directive.spec.ts",
  "src/main/webapp/app/shared/sort/sort.directive.ts",
  "src/main/webapp/bootstrap.ts",
  "src/main/webapp/content/scss/_bootstrap-variables.scss",
  "src/main/webapp/content/scss/global.scss",
  "src/main/webapp/content/scss/vendor.scss",
  "src/main/webapp/declarations.d.ts",
  "src/main/webapp/main.ts",
  "src/main/webapp/polyfills.ts",
  "tsconfig.app.json",
  "tsconfig.json",
  "tsconfig.spec.json",
  "webpack/environment.js",
  "webpack/logo-jhipster.png",
  "webpack/proxy.conf.js",
  "webpack/webpack.custom.js",
]
`;

exports[`Generator Base writeFilesToDisk when called with default angular client options skipping user-management should produce correct files 1`] = `
Array [
  ".browserslistrc",
  ".eslintrc.json",
  ".npmrc",
  "README.md.jhi.client.angular",
  "angular.json",
  "jest.conf.js",
  "ngsw-config.json",
  "package.json",
  "src/main/webapp/app/admin/admin-routing.module.ts",
  "src/main/webapp/app/admin/docs/docs.component.html",
  "src/main/webapp/app/admin/docs/docs.component.scss",
  "src/main/webapp/app/admin/docs/docs.component.ts",
  "src/main/webapp/app/admin/docs/docs.module.ts",
  "src/main/webapp/app/admin/docs/docs.route.ts",
  "src/main/webapp/app/app-routing.module.ts",
  "src/main/webapp/app/app.constants.ts",
  "src/main/webapp/app/app.module.ts",
  "src/main/webapp/app/config/authority.constants.ts",
  "src/main/webapp/app/config/datepicker-adapter.ts",
  "src/main/webapp/app/config/dayjs.ts",
  "src/main/webapp/app/config/error.constants.ts",
  "src/main/webapp/app/config/font-awesome-icons.ts",
  "src/main/webapp/app/config/input.constants.ts",
  "src/main/webapp/app/config/language.constants.ts",
  "src/main/webapp/app/config/pagination.constants.ts",
  "src/main/webapp/app/config/translation.config.ts",
  "src/main/webapp/app/config/uib-pagination.config.ts",
  "src/main/webapp/app/core/auth/account.model.ts",
  "src/main/webapp/app/core/auth/account.service.spec.ts",
  "src/main/webapp/app/core/auth/account.service.ts",
  "src/main/webapp/app/core/auth/auth-jwt.service.spec.ts",
  "src/main/webapp/app/core/auth/auth-jwt.service.ts",
  "src/main/webapp/app/core/auth/state-storage.service.ts",
  "src/main/webapp/app/core/auth/user-route-access.service.ts",
  "src/main/webapp/app/core/config/application-config.service.spec.ts",
  "src/main/webapp/app/core/config/application-config.service.ts",
  "src/main/webapp/app/core/interceptor/auth-expired.interceptor.ts",
  "src/main/webapp/app/core/interceptor/auth.interceptor.ts",
  "src/main/webapp/app/core/interceptor/error-handler.interceptor.ts",
  "src/main/webapp/app/core/interceptor/index.ts",
  "src/main/webapp/app/core/interceptor/notification.interceptor.ts",
  "src/main/webapp/app/core/request/request-util.ts",
  "src/main/webapp/app/core/request/request.model.ts",
  "src/main/webapp/app/core/util/alert.service.spec.ts",
  "src/main/webapp/app/core/util/alert.service.ts",
  "src/main/webapp/app/core/util/data-util.service.spec.ts",
  "src/main/webapp/app/core/util/data-util.service.ts",
  "src/main/webapp/app/core/util/event-manager.service.spec.ts",
  "src/main/webapp/app/core/util/event-manager.service.ts",
  "src/main/webapp/app/core/util/operators.spec.ts",
  "src/main/webapp/app/core/util/operators.ts",
  "src/main/webapp/app/core/util/parse-links.service.spec.ts",
  "src/main/webapp/app/core/util/parse-links.service.ts",
  "src/main/webapp/app/entities/entity-routing.module.ts",
  "src/main/webapp/app/home/home.component.html",
  "src/main/webapp/app/home/home.component.scss",
  "src/main/webapp/app/home/home.component.spec.ts",
  "src/main/webapp/app/home/home.component.ts",
  "src/main/webapp/app/home/home.module.ts",
  "src/main/webapp/app/home/home.route.ts",
  "src/main/webapp/app/layouts/error/error.component.html",
  "src/main/webapp/app/layouts/error/error.component.ts",
  "src/main/webapp/app/layouts/error/error.route.ts",
  "src/main/webapp/app/layouts/footer/footer.component.html",
  "src/main/webapp/app/layouts/footer/footer.component.ts",
  "src/main/webapp/app/layouts/main/main.component.html",
  "src/main/webapp/app/layouts/main/main.component.spec.ts",
  "src/main/webapp/app/layouts/main/main.component.ts",
  "src/main/webapp/app/layouts/navbar/active-menu.directive.ts",
  "src/main/webapp/app/layouts/navbar/navbar.component.html",
  "src/main/webapp/app/layouts/navbar/navbar.component.scss",
  "src/main/webapp/app/layouts/navbar/navbar.component.spec.ts",
  "src/main/webapp/app/layouts/navbar/navbar.component.ts",
  "src/main/webapp/app/layouts/navbar/navbar.route.ts",
  "src/main/webapp/app/layouts/profiles/page-ribbon.component.scss",
  "src/main/webapp/app/layouts/profiles/page-ribbon.component.spec.ts",
  "src/main/webapp/app/layouts/profiles/page-ribbon.component.ts",
  "src/main/webapp/app/layouts/profiles/profile-info.model.ts",
  "src/main/webapp/app/layouts/profiles/profile.service.ts",
  "src/main/webapp/app/login/login.component.html",
  "src/main/webapp/app/login/login.component.spec.ts",
  "src/main/webapp/app/login/login.component.ts",
  "src/main/webapp/app/login/login.model.ts",
  "src/main/webapp/app/login/login.module.ts",
  "src/main/webapp/app/login/login.route.ts",
  "src/main/webapp/app/login/login.service.ts",
  "src/main/webapp/app/shared/alert/alert-error.component.html",
  "src/main/webapp/app/shared/alert/alert-error.component.spec.ts",
  "src/main/webapp/app/shared/alert/alert-error.component.ts",
  "src/main/webapp/app/shared/alert/alert-error.model.ts",
  "src/main/webapp/app/shared/alert/alert.component.html",
  "src/main/webapp/app/shared/alert/alert.component.spec.ts",
  "src/main/webapp/app/shared/alert/alert.component.ts",
  "src/main/webapp/app/shared/auth/has-any-authority.directive.spec.ts",
  "src/main/webapp/app/shared/auth/has-any-authority.directive.ts",
  "src/main/webapp/app/shared/date/duration.pipe.ts",
  "src/main/webapp/app/shared/date/format-medium-date.pipe.spec.ts",
  "src/main/webapp/app/shared/date/format-medium-date.pipe.ts",
  "src/main/webapp/app/shared/date/format-medium-datetime.pipe.spec.ts",
  "src/main/webapp/app/shared/date/format-medium-datetime.pipe.ts",
  "src/main/webapp/app/shared/language/find-language-from-key.pipe.ts",
  "src/main/webapp/app/shared/language/translate.directive.spec.ts",
  "src/main/webapp/app/shared/language/translate.directive.ts",
  "src/main/webapp/app/shared/pagination/item-count.component.spec.ts",
  "src/main/webapp/app/shared/pagination/item-count.component.ts",
  "src/main/webapp/app/shared/shared-libs.module.ts",
  "src/main/webapp/app/shared/shared.module.ts",
  "src/main/webapp/app/shared/sort/sort-by.directive.spec.ts",
  "src/main/webapp/app/shared/sort/sort-by.directive.ts",
  "src/main/webapp/app/shared/sort/sort.directive.spec.ts",
  "src/main/webapp/app/shared/sort/sort.directive.ts",
  "src/main/webapp/bootstrap.ts",
  "src/main/webapp/content/scss/_bootstrap-variables.scss",
  "src/main/webapp/content/scss/global.scss",
  "src/main/webapp/content/scss/vendor.scss",
  "src/main/webapp/declarations.d.ts",
  "src/main/webapp/main.ts",
  "src/main/webapp/polyfills.ts",
  "tsconfig.app.json",
  "tsconfig.json",
  "tsconfig.spec.json",
  "webpack/environment.js",
  "webpack/logo-jhipster.png",
  "webpack/proxy.conf.js",
  "webpack/webpack.custom.js",
]
`;
